testsuite/tests/module/mod152.stderr

mod152.hs:2:26: error:
    Ambiguous occurrence ‘id’
    It could refer to
       either ‘Prelude.id’,
              imported from ‘Prelude’ at mod152.hs:2:8
              (and originally defined in ‘ghc-base-4.18.0.0:GHC.Base’)
           or ‘M.id’, defined at mod152.hs:2:36
